--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure/project.json
@@ -39,46 +39,46 @@
       "buildOptions": { "define": [ "PORTABLE" ] },
       "imports": ["dnxcore50", "portable-net45+win8"],
       "dependencies": {
-        "Microsoft.NETCore.Platforms": "1.0.1-rc2-24027",
-        "Microsoft.NETCore.Runtime": "1.0.2-rc2-24027",
-        "System.Collections": "4.0.11-rc2-24027",
-        "System.Diagnostics.Debug": "4.0.11-rc2-24027",
-        "System.Diagnostics.Tools": "4.0.1-rc2-24027",
-        "System.Diagnostics.Tracing": "4.1.0-rc2-24027",
-        "System.Globalization": "4.0.11-rc2-24027",
-        "System.Linq": "4.1.0-rc2-24027",
-        "System.Net.Http": "4.0.1-rc2-24027",
-        "System.Net.Primitives": "4.0.11-rc2-24027",
-        "System.ObjectModel": "4.0.12-rc2-24027",
-        "System.Reflection.Extensions": "4.0.1-rc2-24027",
-        "System.Resources.ResourceManager": "4.0.1-rc2-24027",
-        "System.Runtime.Extensions": "4.1.0-rc2-24027",
-        "System.Text.RegularExpressions": "4.0.12-rc2-24027",
-        "System.Threading": "4.0.11-rc2-24027",
-        "System.Xml.ReaderWriter": "4.0.11-rc2-24027",
+        "Microsoft.NETCore.Platforms": "1.0.1",
+        "Microsoft.NETCore.Runtime": "1.0.2",
+        "System.Collections": "4.0.11",
+        "System.Diagnostics.Debug": "4.0.11",
+        "System.Diagnostics.Tools": "4.0.1",
+        "System.Diagnostics.Tracing": "4.1.0",
+        "System.Globalization": "4.0.11",
+        "System.Linq": "4.1.0",
+        "System.Net.Http": "4.0.1",
+        "System.Net.Primitives": "4.0.11",
+        "System.ObjectModel": "4.0.12",
+        "System.Reflection.Extensions": "4.0.1",
+        "System.Resources.ResourceManager": "4.0.1",
+        "System.Runtime.Extensions": "4.1.0",
+        "System.Text.RegularExpressions": "4.0.12",
+        "System.Threading": "4.0.11",
+        "System.Xml.ReaderWriter": "4.0.11",
       }
     },
     "netstandard1.5": {
       "buildOptions": { "define": [ "PORTABLE" ] },
       "imports": ["dnxcore50"],
       "dependencies": {
-        "Microsoft.NETCore.Platforms": "1.0.1-rc2-24027",
-        "Microsoft.NETCore.Runtime": "1.0.2-rc2-24027",
-        "System.Collections": "4.0.11-rc2-24027",
-        "System.Diagnostics.Debug": "4.0.11-rc2-24027",
-        "System.Diagnostics.Tools": "4.0.1-rc2-24027",
-        "System.Diagnostics.Tracing": "4.1.0-rc2-24027",
-        "System.Globalization": "4.0.11-rc2-24027",
-        "System.Linq": "4.1.0-rc2-24027",
-        "System.Net.Http": "4.0.1-rc2-24027",
-        "System.Net.Primitives": "4.0.11-rc2-24027",
-        "System.ObjectModel": "4.0.12-rc2-24027",
-        "System.Reflection.Extensions": "4.0.1-rc2-24027",
-        "System.Resources.ResourceManager": "4.0.1-rc2-24027",
-        "System.Runtime.Extensions": "4.1.0-rc2-24027",
-        "System.Text.RegularExpressions": "4.0.12-rc2-24027",
-        "System.Threading": "4.0.11-rc2-24027",
-        "System.Xml.ReaderWriter": "4.0.11-rc2-24027",
+        "Microsoft.NETCore.Platforms": "1.0.1",
+        "Microsoft.NETCore.Runtime": "1.0.2",
+        "System.Collections": "4.0.11",
+        "System.Diagnostics.Debug": "4.0.11",
+        "System.Diagnostics.Tools": "4.0.1",
+        "System.Diagnostics.Tracing": "4.1.0",
+        "System.Globalization": "4.0.11",
+        "System.Linq": "4.1.0",
+        "System.Net.Http": "4.0.1",
+        "System.Net.Primitives": "4.0.11",
+        "System.ObjectModel": "4.0.12",
+        "System.Reflection.Extensions": "4.0.1",
+        "System.Resources.ResourceManager": "4.0.1",
+        "System.Runtime.Extensions": "4.1.0",
+        "System.Text.RegularExpressions": "4.0.12",
+        "System.Threading": "4.0.11",
+        "System.Xml.ReaderWriter": "4.0.11",
       }
     }
   },
