Adding attribute validator for making sure that default values are part of the enum, if included

--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Model\Tag.cs" />
     <Compile Include="Model\TransferProtocolScheme.cs" />
     <Compile Include="ValidationExceptionConstants.cs" />
+    <Compile Include="Validators\Attributes\DefaultInEnumAttribute.cs" />
     <Compile Include="Validators\Attributes\ClientNameRequiredAttribute.cs" />
     <Compile Include="Validators\Attributes\DescriptionRequiredAttribute.cs" />
     <Compile Include="Validators\NestedObjectValidator.cs" />
