Adding placeholder validation attribute for one one body parameter

--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Model\Tag.cs" />
     <Compile Include="Model\TransferProtocolScheme.cs" />
     <Compile Include="ValidationExceptionConstants.cs" />
+    <Compile Include="Validators\Attributes\OnlyOneBodyParameterAttribute.cs" />
     <Compile Include="Validators\Attributes\RefNoSiblingsAttribute.cs" />
     <Compile Include="Validators\Attributes\ResponseRequiredAttribute.cs" />
     <Compile Include="Validators\Attributes\RequiredPropertiesMustExistAttribute.cs" />
