Changing rules base class so that it's a generic instead of subclassed directly from attributes

--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -74,17 +74,18 @@
     <Compile Include="Model\Tag.cs" />
     <Compile Include="Model\TransferProtocolScheme.cs" />
     <Compile Include="ValidationExceptionConstants.cs" />
-    <Compile Include="Validators\Attributes\AnonymousTypesAttribute.cs" />
-    <Compile Include="Validators\Attributes\ValidFormatsAttribute.cs" />
-    <Compile Include="Validators\Attributes\OnlyOneBodyParameterAttribute.cs" />
-    <Compile Include="Validators\Attributes\RefNoSiblingsAttribute.cs" />
-    <Compile Include="Validators\Attributes\ResponseRequiredAttribute.cs" />
-    <Compile Include="Validators\Attributes\RequiredPropertiesMustExistAttribute.cs" />
-    <Compile Include="Validators\Attributes\DefaultInEnumAttribute.cs" />
-    <Compile Include="Validators\Attributes\ClientNameRequiredAttribute.cs" />
-    <Compile Include="Validators\Attributes\DescriptionRequiredAttribute.cs" />
+    <Compile Include="Validators\Attributes\AnonymousTypes.cs" />
+    <Compile Include="Validators\Attributes\Rule.cs" />
+    <Compile Include="Validators\Attributes\TypeRule.cs" />
+    <Compile Include="Validators\Attributes\ValidFormats.cs" />
+    <Compile Include="Validators\Attributes\OnlyOneBodyParameter.cs" />
+    <Compile Include="Validators\Attributes\RefNoSiblings.cs" />
+    <Compile Include="Validators\Attributes\ResponseRequired.cs" />
+    <Compile Include="Validators\Attributes\RequiredPropertiesMustExist.cs" />
+    <Compile Include="Validators\Attributes\DefaultInEnum.cs" />
+    <Compile Include="Validators\Attributes\ClientNameRequired.cs" />
+    <Compile Include="Validators\Attributes\DescriptionRequired.cs" />
     <Compile Include="Validators\NestedObjectValidator.cs" />
-    <Compile Include="Validators\Attributes\RequiredAttribute.cs" />
     <Compile Include="Validators\ResponseValidator.cs" />
     <Compile Include="Validators\PathsValidator.cs" />
     <Compile Include="Validators\OperationsValidator.cs" />
