--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Log4Net/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Log4Net/project.json
@@ -16,6 +16,7 @@
 
   "buildOptions": {
     "delaySign": true,
+    "publicSign": false,
     "keyFile": "../../../Tools/MSSharedLibKey.snk"
   },
 
