--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Model\TransferProtocolScheme.cs" />
     <Compile Include="ValidationExceptionConstants.cs" />
     <Compile Include="Validators\Attributes\AnonymousTypes.cs" />
+    <Compile Include="Validators\Attributes\OperationIdSingleUnderscore.cs" />
     <Compile Include="Validators\Attributes\Rule.cs" />
     <Compile Include="Validators\Attributes\TypeRule.cs" />
     <Compile Include="Validators\Attributes\ValidFormats.cs" />
