--- a/AutoRest/Generators/Java/Azure.Java.Fluent/AutoRest.Generator.Azure.Java.Fluent.csproj
+++ b/AutoRest/Generators/Java/Azure.Java.Fluent/AutoRest.Generator.Azure.Java.Fluent.csproj
@@ -43,6 +43,7 @@
     <Compile Include="TemplateModels\AzureFluentServiceClientTemplateModel.cs" />
     <Compile Include="TemplateModels\AzureFluentModelTemplateModel.cs" />
     <Compile Include="TemplateModels\FluentPageTemplateModel.cs" />
+    <Compile Include="TypeModels\FluentEnumTypeModel.cs" />
     <Compile Include="TypeModels\FluentCompositeTypeModel.cs" />
     <Compile Include="TypeModels\FluentPropertyModel.cs" />
   </ItemGroup>
