[experiments] Refactoring validation model to use attributes (#1205)
* Adding test for consumes MIME type and moving consumes rule to ServiceDefinitionValidator

* Adding test to make sure that all the MIME types in produces section are supported

* Adding validation test to make sure missing definitions show a warning

* Adding validators for Paths and subproperties

* Adding validator tests for invalid consumes or produces values in operations

* Adding custom path validation in service definition validation

* Adding responses, global parameters and external docs to service definition validation

* Adding validator test to ensure operations only have no more than 1 body parameter

* Changing validation to individually validate global response objects, to avoid applying the at least 1 response rule

* Removing NotImplementedException from external docs validation

* Adding a null check for SwaggerBaseValidator when checking extensions

* Adding Constants file for exception ids and adding a helper method for logging validation exceptions

* Adding setting for determining the error level during validation that should return an error code

* Moving validation core to AutoRest core and making modeler able to return any validation errors that come from building the model

* Changing validation tests to use validation messages instead of inspecting logger

* Adding command line setting to prevent autorest from generating code, just showing errors

* Adding a No-Op code generator that will just run validation without generating any code

* Adding line numbers to output of validation errors. Adding JSONConverter to automatically add the line number information to the error

* Adding path information to the output of the validation message

* Preventing NRE when settings the source of a swagger definition

* Formatting all validation test swaggers

* Converting all validators to use CreateException for returning messages

* Fixin

--- a/AutoRest/AutoRest.Core/AutoRest.Core.csproj
+++ b/AutoRest/AutoRest.Core/AutoRest.Core.csproj
@@ -39,11 +39,14 @@
     <Compile Include="ClientModel\PrimaryType.cs" />
     <Compile Include="ClientModel\ParameterLocation.cs" />
     <Compile Include="ClientModel\Constraint.cs" />
+    <Compile Include="JSONSourceContext.cs" />
+    <Compile Include="NoopCodeGenerator.cs" />
     <Compile Include="CodeNamer.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Modeler.cs" />
     <Compile Include="SettingsAliasAttribute.cs" />
+    <Compile Include="SourceContext.cs" />
     <Compile Include="Template.cs" />
     <Compile Include="ClientModel\ServiceClient.cs" />
     <Compile Include="ClientModel\DictionaryType.cs" />
@@ -81,6 +84,10 @@
     <Compile Include="Logging\LogEntrySeverity.cs" />
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Utilities\MemoryFileSystem.cs" />
+    <Compile Include="Validation\IValidator.cs" />
+    <Compile Include="Validation\ValidationException.cs" />
+    <Compile Include="Validation\ValidationExceptionConstants.cs" />
+    <Compile Include="Validation\ValidationMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
