--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -74,21 +74,16 @@
     <Compile Include="Model\Info.cs" />
     <Compile Include="Model\Tag.cs" />
     <Compile Include="Model\TransferProtocolScheme.cs" />
-    <Compile Include="Validators\Attributes\AnonymousTypes.cs" />
-    <Compile Include="Validators\Attributes\OperationIdSingleUnderscore.cs" />
-    <Compile Include="Validators\Attributes\Rule.cs" />
-    <Compile Include="Validators\Attributes\IterableRuleAttribute.cs" />
-    <Compile Include="Validators\Attributes\TypeRule.cs" />
-    <Compile Include="Validators\Attributes\ValidFormats.cs" />
-    <Compile Include="Validators\Attributes\OnlyOneBodyParameter.cs" />
-    <Compile Include="Validators\Attributes\RefNoSiblings.cs" />
-    <Compile Include="Validators\Attributes\ResponseRequired.cs" />
-    <Compile Include="Validators\Attributes\RequiredPropertiesMustExist.cs" />
-    <Compile Include="Validators\Attributes\DefaultInEnum.cs" />
-    <Compile Include="Validators\Attributes\ClientNameRequired.cs" />
-    <Compile Include="Validators\Attributes\DescriptionRequired.cs" />
-    <Compile Include="Validators\Attributes\RuleAttribute.cs" />
-    <Compile Include="Validators\NestedObjectValidator.cs" />
+    <Compile Include="ValidationRules\AnonymousTypes.cs" />
+    <Compile Include="ValidationRules\OperationIdSingleUnderscore.cs" />
+    <Compile Include="ValidationRules\ValidFormats.cs" />
+    <Compile Include="ValidationRules\OnlyOneBodyParameter.cs" />
+    <Compile Include="ValidationRules\RefNoSiblings.cs" />
+    <Compile Include="ValidationRules\ResponseRequired.cs" />
+    <Compile Include="ValidationRules\RequiredPropertiesMustExist.cs" />
+    <Compile Include="ValidationRules\DefaultInEnum.cs" />
+    <Compile Include="ValidationRules\ClientNameRequired.cs" />
+    <Compile Include="ValidationRules\DescriptionRequired.cs" />
     <Compile Include="YamlBoolDeserializer.cs" />
   </ItemGroup>
   <ItemGroup>
